live-magic (1.7) UNRELEASED; urgency=low

  * Only delete build directory if we created it. This is not only safer, but
    fixes a weird bug where Live Magic deletes its own DebianLive Python module
    when run from Git (as that directory is considered a build directory).
  * Add missing import so we don't fail with a misleading error when GTK fails
    to initialise.

 -- Chris Lamb <lamby@debian.org>  Wed, 08 Jul 2009 22:26:23 +0100

live-magic (1.6) unstable; urgency=low

  * Don't assume /etc/debian_version will contain the string "5.0\n" for the
    entirety of the lenny release - just check for a prefix of "5.0".

 -- Chris Lamb <lamby@debian.org>  Tue, 05 May 2009 23:29:14 +0100

live-magic (1.5) unstable; urgency=low

  * Use WINDOW_TYPE_HINT_DIALOG hint instead of WINDOW_TYPE_HINT_MENU to
    prevent awkward and non-intuitive behaviour when iconifying window.
    Thanks to Daniel Watkins <daniel@daniel-watkins.co.uk>. (Closes: #511632)
  * Correct (and clarify) logic of file manager fallback.
  * Re-order import of GTK and PyGTK as GTK requires that PyGTK is imported
    first. This is required for compatibility with python-gtk2 2.13 (currently
    in experimental). Thanks to Michael Vogt.
  * Add missing 'ignore-system-defaults' and 'color' constructor arguments.

 -- Chris Lamb <lamby@debian.org>  Sat, 10 Jan 2009 04:01:59 +0000

live-magic (1.4) unstable; urgency=low

  * Update DebianLive/spec.py:
    - Add missing LH_CACHE_PACKAGES.
    - Bump Depends on live-helper to 1.0.2-2.
  * Open file manager with absolute path to the current directory as PCMan
    does not open displaying target with `cd /target && pcmanfm .`.
  * Add missing ${misc:Depends}.

 -- Chris Lamb <lamby@debian.org>  Sat, 10 Jan 2009 02:54:52 +0000

live-magic (1.3) unstable; urgency=low

  * Sync option specification with live-helper 1.0.1-1.
  * Modify mirror auto-detection to ignore the debian-multimedia and
    volatile.debian.org repositories. (Closes: #502335)