@@ -3,6 +3,8 @@
 set -e
 set -o pipefail
 
+export PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/X11R6/bin"
+
 LOG="build-log.txt"
 
 touch ${LOG}
