@@ -5,6 +5,10 @@ live-magic (1.7) UNRELEASED; urgency=low
     when run from Git (as that directory is considered a build directory).
   * Add missing import so we don't fail with a misleading error when GTK fails
     to initialise.
+  * Revert back to using --preserve-env after reverting this in #491242. This
+    seems a more robust way of ensuring that the child process can actually
+    talk to X. We set the path manually in live-magic-builder to prevent the
+    actual failure originally reported in #491242.
 
  -- Chris Lamb <lamby@debian.org>  Wed, 08 Jul 2009 22:26:23 +0100
 
